argo/apps/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: bookstack
spec:
  type: ClusterIP
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service        # match the ingress backend
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8989               # or 80 if you want to match the Ingress path directly
      targetPort: 8989
      protocol: TCP
  selector:
    app.kubernetes.io/name: sonarr
