argo/apps/sonarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.router.middlewares: media-sonarr-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
        - sonarr.lan
      secretName: wildcard-lan-tls
  rules:
    - host: sonarr.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr-service
                port:
                  number: 8989
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: media-sonarr-redirect-https
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
